Update docker tag to be name of branch #2

--- a/.github/workflows/ci-docker-releases.yml
+++ b/.github/workflows/ci-docker-releases.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: "Set current date as env variable"
         run: |
-          $branchName = "${{ github.ref }}".Split("/")["${{ github.ref }}".Split("/").Length -1]
-          echo "branchName=$branchName"
+          ghref = "${{ github.ref }}"
+          echo "branchName=${ghref//refs\/heads\/releases\//}"
           echo "buildyear=$(date +'%Y')" >> $GITHUB_ENV
           echo "builddate=$(date +'%m%d%H%M')" >> $GITHUB_ENV
 
